Middle ware done

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
